--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,8 @@
 
         <link href="css/templatemo-festava-live.css" rel="stylesheet">
 
+        <link href="css/bootstrap-select.min.css" rel="stylesheet">
+
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 
         {% block javascripts %}
