--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -12,11 +12,13 @@
 
         <section class="contact-section section-padding section" id="section_6">
             <div class="container pt-4">
-                <a href="{{ path('app_logout') }}" class="btn custom-btn d-lg-inline-block">
-                    <i class="bi-arrow-90deg-left   "></i>
-                    <span>Se déconnecter</span>
-                </a>
                 <div class="row align-items-center">
+                    <div class="col-md-12 mt-5" style="margin-left: 15px">
+                        <a href="{{ path('app_logout') }}" class="btn custom-btn d-lg-inline-block">
+                            <i class="bi-arrow-90deg-left   "></i>
+                            <span>Se déconnecter</span>
+                        </a>
+                    </div>
                     {% if videoSent %}
                     <div class="col-md-6 mx-auto">
                         <div class="tab-content shadow-lg mt-5" id="nav-tabContent">
@@ -39,9 +41,16 @@
                     {% else %}
                     <div class="col-md-6 mx-auto">
                         <div class="tab-content shadow-lg mt-5" id="nav-tabContent">
+                            {% if videoError != null %}
+                                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                    {{ videoError }}
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                </div>
+                            {% endif %}
                             <div class="tab-pane fade show active" id="nav-ContactForm" role="tabpanel"
                                  aria-labelledby="nav-ContactForm-tab">
-                                <h5 class="text-center mb-4">Ajouter la vidéo de votre prestation !</h5>
+                                <h5 class="text-center mb-0">Ajouter la vidéo de votre prestation !</h5>
+                                <p class="mb-4 text-center">Ajouter une vidéo au format .mp4</p>
                                 {{ form_start(form) }}
                                 <div class="form-group">
                                     <div class="custom-file">
